refactor: 행마법이 목적지가 아닌 경로를 리턴하도록 변경
단순히 목적지만 리턴하는 경우에는 추후에 목적지까지 가는 경로에 다른 기물이 있는 경우를 처리할 수 없다.

따라서 목적지(Intersection)가 아닌, 경로(Path)를 리턴하도록 한다.