@@ -1,8 +1,10 @@
 package domain.piece.movement;
 
 import domain.board.Intersection;
+import domain.direction.Direction;
 import domain.direction.MoveAmount;
 import domain.game.Side;
+import java.util.Collections;
 import java.util.List;
 
 public final class SoldierMovement extends PieceMovement {
@@ -10,11 +12,17 @@ public final class SoldierMovement extends PieceMovement {
     private static final MoveAmount MOVE_AMOUNT = new MoveAmount(1);
 
     @Override
-    protected List<Intersection> candidateIntersections(Intersection from, Side side) {
-        Intersection forward = side.getForwardDirection().moveForward(from, MOVE_AMOUNT);
-        Intersection left = side.getForwardDirection().moveLeft(from, MOVE_AMOUNT);
-        Intersection right = side.getForwardDirection().moveRight(from, MOVE_AMOUNT);
+    protected List<Path> candidatePaths(Intersection from, Side side) {
+        Direction forwardDirection = side.getForwardDirection();
 
-        return List.of(forward, left, right);
+        Intersection forward = forwardDirection.moveForward(from, MOVE_AMOUNT);
+        Intersection left = forwardDirection.moveLeft(from, MOVE_AMOUNT);
+        Intersection right = forwardDirection.moveRight(from, MOVE_AMOUNT);
+
+        return List.of(
+                new Path(forward, Collections.emptyList()),
+                new Path(left, Collections.emptyList()),
+                new Path(right, Collections.emptyList())
+        );
     }
 }
